# futaba-shieldgemma

./: .gitignore  README.md  pyproject.toml  test.py
futaba_shieldgemma/: __init__.py  __main__.py  classifier.py  cli.py  fetcher.py  handlers.py  main.py  parser.py
